# openomf_lobby

./: LICENSE  README.md  rebar.config
priv/: build_discord_bot.sh
priv/discord_bot/: Cargo.toml
priv/discord_bot/src/: main.rs
src/: openomf_lobby.app.src  openomf_lobby_app.erl  openomf_lobby_client.erl  openomf_lobby_client_sup.erl  openomf_lobby_discord_port.erl  openomf_lobby_match.erl  openomf_lobby_match_sup.erl  openomf_lobby_sup.erl
